--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@
     }
     header {
         @apply fixed top-0 z-50 flex w-full items-center 
-        justify-between px-4 py-4 transition-all lg:px-10 lg:py-6;
+        justify-between px-4 py-2 transition-all lg:px-10 lg:py-4;
     }
 }
 
@@ -26,5 +26,13 @@
     .bannerButton{
         @apply flex items-center gap-x-2 rounded-md px-5 py-1.5 text-sm 
         font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl
+    }
+    .input { 
+        @apply w-full rounded bg-[#333] px-5 py-3.5 placeholder-gray-500 outline-none
+        focus:bg-[#454545]
+    }
+    .modalButton {
+        @apply flex h-11 w-11 items-center justify-center rounded-full border-2 
+        border-gray-500 bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10
     }
 }
