--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,6 @@
     }
 }
 
-
 /* custom className */
 
 @layer components {
@@ -23,16 +22,22 @@
         @apply cursor-pointer text-sm font-light 
         text-[#e5e5e5] hover:text-red-500 transition duration-300;
     }
-    .bannerButton{
+    .bannerButton {
         @apply flex items-center gap-x-2 rounded-md px-5 py-1.5 text-sm 
-        font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl
+        font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
     }
-    .input { 
+    .input {
         @apply w-full rounded bg-[#333] px-5 py-3.5 placeholder-gray-500 outline-none
-        focus:bg-[#454545]
+        focus:bg-[#454545];
     }
     .modalButton {
         @apply flex h-11 w-11 items-center justify-center rounded-full border-2 
-        border-gray-500 bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10
+        border-gray-500 bg-[#2a2a2a]/60 transition hover:border-white hover:bg-white/10;
+    }
+    .planBox {
+        @apply relative mx-1.5 flex h-20 bg-[#e50914] w-[calc(100%/3)] cursor-default 
+        items-center justify-center rounded-sm shadow after:absolute after:top-full
+        after:left-1/2 after:block after:-translate-x-1/2 after:border-8 after:border-b-0
+        after:border-transparent after:border-t-[#e50914] after:content-[""] md:h-32 lg:mx-8;
     }
 }
